[package]
name = "turbosloth"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"
rust = "1.46"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
env_logger = "0.7"
tokio = { version = "0.2", features = ["rt-core", "rt-threaded"] }
tracing = "0.1"
turbosloth-macros = { path = "turbosloth-macros" }
twox-hash = "1.5"

[dev-dependencies]
hotwatch = "0.4"
lazy_static = "1.4"