[package]
name = "turbosloth"
description = "On-demand computation"
repository = "https://github.com/h3r2tic/turbosloth"
version = "0.2.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/turbosloth"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures-lite = "1"
#tracing = "0.1"
#twox-hash = { version = "1.5", default-features = false }
wyhash = "0.5"

[dev-dependencies]
anyhow = "1.0"
hotwatch = "0.4"
lazy_static = "1.4"
smol = "1.2.5"
