[package]
name = "turbosloth-macros"
description = "Internals macros for turbosloth"
repository = "https://github.com/h3r2tic/turbosloth"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1.0"
syn = { version = "1.0.35", features = [
    "full",
    "extra-traits"  # Debug
] }